[package]
name = "pong"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.13"
rand = "0.9.0-beta.0"
tokio = { version = "1.41.1", features = ["full", "io-std"] }
futures-util = { version = "0.3.31", features = ["sink"] }
http = "1.1.0"
tokio-websockets = { version = "0.10.1", features = ["client", "fastrand", "server", "sha1_smol"] }
ws = "0.9.2"
